2006-01-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* build.xml:
	  add time of build as well, useful when debugging builds

2006-01-20  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/plugin/AudioSinkSA.java:
	(AudioSinkSA...RingReader.read),
	(AudioSinkSA...RingReader.RingBufferSA.read):
	Change read behaviour to please both IE and jdk

2006-01-20  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jst/Pad.java: (Pad.setCaps):
	Don't call the listeners with null caps.

	* src/com/fluendo/plugin/AudioSinkSA.java:
	(AudioSinkSA...RingReader.stop):
	Some debugging

2006-01-20  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/plugin/AudioSinkSA.java: (AudioSinkSA),
	(AudioSinkSA...toUlaw), (AudioSinkSA...RingReader.pause),
	(AudioSinkSA...RingReader.stop):
	Redid sun.audio backend to work on bytes and do more
	accurate resampling.

2006-01-20  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/plugin/AudioSinkSA.java:
	(AudioSinkSA...RingReader.stop):
	Convert byte to int.

2006-01-20  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/plugin/AudioSinkSA.java:
	(AudioSinkSA...RingReader), (AudioSinkSA...RingReader.RingReader),
	(AudioSinkSA...RingReader.pause), (AudioSinkSA...RingReader.stop),
	(AudioSinkSA...RingReader.read),
	(AudioSinkSA...RingReader.RingBufferSA.play),
	(AudioSinkSA...RingReader.RingBufferSA),
	(AudioSinkSA...RingReader.RingBufferSA.pause),
	(AudioSinkSA...RingReader.RingBufferSA.stop),
	(AudioSinkSA...RingReader.RingBufferSA.read):
	Implement read() for IE JVM.

2006-01-19  Wim Taymans  <wim@fluendo.com>

	* TODO:
	* src/com/fluendo/plugin/Queue.java: (Queue), (Queue.clearQueue),
	(Queue.Pad):
	Handle EOS gracefully.

2006-01-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/com/fluendo/jst/Bus.java: (Bus.peek):
	* src/com/fluendo/jst/Pipeline.java: (Pipeline.SortedEnumerator),
	(Pipeline.SortedEnumerator.queueNextElement):
	* src/com/fluendo/player/Status.java: