@@ -84,6 +84,10 @@ class Configure
 {
   public String buildInfo = "Built on ${DATE} (version ${product.version}) in ${build.type} mode.";
 
+  public String buildDate = "${DATE}";
+  public String buildVersion = "${product.version}";
+  public String buildType = "${build.type}";
+
   public Configure() {
   }
 }
